--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="card-body">
                 <h3 class="card-title" id="card_head_1">About Me</h3>
                 <p class="card-text">
-                    <img src="./images/sheep_profile.png" class="col-sm-4 col-xs-4 img-responsive" alt="Photo of me">
+                    <img src="./images/sheep_profile.png" class="col-sm-4 col-xs-4 img-responsive" alt="Photo of me" id="photo">
                     <p> I am reinventing myself:  after many years of physically demanding
                         outdoor work, I have decided to give my lower back a break.
                         I am excited to learn how to code, and I look forward to a 
