--- a/contact.html
+++ b/contact.html
@@ -12,16 +12,16 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="topbar">
     
-        <a class="navbar-brand" href="#" id="brand">Carmen Owen</a>                
+        <a class="navbar-brand" href="#" id="contactBrand">Carmen Owen</a>                
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>        
         <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="container" id="menu">
+            <div class="container" id="contactMenu">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="index.html">About</a>
                     <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                    <a class="nav-item nav-link" href="contact.html">Contact</a>
+                    <a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
                 </div>  
             </div>
         </div>
@@ -30,6 +30,29 @@
 
 <body>
 
+    <div class="card" id="contact">
+        <div class="card-body">
+            <h1 class="card-title">Contact</h1>
+            <p class="card-text">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Name</label>
+                        <input class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder= "Message" rows="5"></textarea>
+                    </div>
+                </form>
+            </p>
+            <a href="#" class="btn btn-primary" id="button">Submit</a>
+        </div>
+    </div>
+    
     <div>
         <nav class="navbar" id="bottombar">
             <span class="d-inline-flex p-2 bd-highlight" id="bottombartext">
