--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="row" id="main">
         <div class="col-sm-8">
-            <div class="card">
+            <div class="card" id="mainbox">
             <div class="card-body">
                 <h3 class="card-title" id="card_head_1">About Me</h3>
                 <p class="card-text">
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="card">
+            <div class="card" id="aside">
             <div class="card-body">
                 <h5 class="card-title" id="card_head_2">Connect With Me</h5>
                 <p class="card-text" id="icons">
